more detailed outline

--- a/applications.tex
+++ b/applications.tex
@@ -6,3 +6,10 @@ Here we can talk about applications that have used split commit such as LEGO/DUP
 We can then talk about how this is a valid UC commitment and that split commit is insteresting as a stand along commitment in the standard model.
 
 Finally, we can compare to RO commitments. Then is that actually better and then worse.
+
+ - Better for random messages of size ~128 bits\\
+ - Comparable for chosen message of size 128 bits\\
+ - Better for small decommitments\\
+ - Worse for long messages\\
+ - Worse interactive commitment.\\
+ - SplitCommit can use FiatShamir to get non interactive with small comm.
