--- a/main.tex
+++ b/main.tex
@@ -12,17 +12,18 @@
 
 \begin{document}
 	
-	\title{}
+	\title{SplitCommit: Implementing Homomorphic UC Commitments}
 	
 	
 	\author{
-		Peter Rindal \& Roberto  Trifiletti
+		Peter Rindal\thanks{Oregon State University,  {\sf rindalp@oregonstate.edu}. This author is supported by an ARCS foundation fellowship.}, Roberto  Trifiletti\thanks{Aarhus University, {\sf roberto@cs.au.dk}.}
 		}
 		
 		\maketitle
 
 	
 	\begin{abstract}
+	In this work we implement the XOR-homomorphic commmitment scheme of Frederiksen, Jakobsen, Nielsen, and Trifiletti \cite{DBLP:conf/tcc/FrederiksenJNT16}.
 
 	\end{abstract}
 	
