remove unused bibstuff

--- a/main.tex
+++ b/main.tex
@@ -41,7 +41,7 @@
 	\input{applications}
 	
 	\bibliographystyle{alpha}
-	\bibliography{bib,abbrev3,crypto_crossref}
+	\bibliography{bib}
 	
 	
 \end{document}
