--- a/bib.bib
+++ b/bib.bib
@@ -32,3 +32,9 @@
   biburl    = {http://dblp.uni-trier.de/rec/bib/conf/tcc/2016a1},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
+
+@misc{libOTe,
+	author = {Peter Rindal},
+	title = {{libOTe: an efficient, portable, and easy to use Oblivious Transfer Library}},
+	howpublished = {\url{https://github.com/osu-crypto/libOTe}},
+}
