--- a/building.tex
+++ b/building.tex
@@ -1,3 +1,4 @@
 \section{Building Split Commit}
 
-Here, we should mostly refer to the github instructions. But we cna say that we  build on lib OT and its the basics of how to build.
+Split Commit and its dependencies can be found at \url{https://github.com/AarhusCrypto/SplitCommit}. This project utilizes the cmake build systems and capable of integrating into larger build systems with minimal overhead. Apart from cmake and other basic utilities, the implementation builds on the libOTe\cite{libOTe} library which requires the c++ utility library Boost\cite{boost} and cryptography libary Miracl\cite{miracl}. For complete details on how to build these utilities, we refer the reader to the readme file contained in the git repository.
+
