--- a/tutorial.tex
+++ b/tutorial.tex
@@ -7,3 +7,7 @@ We should also show how to perform homomorphic operations on them.
 Then we can add batch decommit to the mix.
 
 Finally, show how to handle chosen message with homomorphic operations on them.
+
+---------------------------------------------------------------------------------------
+
+In this section we will give a basic overview of how to construct and use the split commit library. First, let us consider the case of committing to $n$ radnom commitments.
