--- a/performance.tex
+++ b/performance.tex
@@ -1,6 +1,11 @@
 \section{Performance}
 
+To demonstrate the scalability of the implementation, benchmarks have been performed in an Intel Xeon server consisting of 2 36-cores Intel Xeon CPU E5-2699 v3 @ 2.30GHz and 256GB of RAM. In the single threaded setting on a 10Gbps LAN, $n=2^{24}$ commitments on random 128 bit values required 11 seconds, resulting in 0.65 microseconds per commitment. When decommitting via sending the two secret shares for all $n$ commitments, the implementation requires 5.4 seconds, 0.32 microseconds per decommitment. The same operation performed using batch decommit, the implementation requires 4.6 seconds, 0.27 microseconds per decommitment. Furthermore, homomorphic operations can be performed extremely fast, simply requiring  a few XOR instructions per operations, requiring less than 1 seconds for $n$ operations. 
 
-Here we should give performance numbers with a threads or two and with in different network setting
+In addition, we benchmark our implementation in the 100Mbps WAN setting with a 80ms round trip latency. For $n=2^{24}$, committing  required 75 seconds, 4.5 microseconds per commitment. Decommiting via sending both secret shares required 505 seconds while the more communication efficient batch decommitment method required 316 seconds, 18.9 microseconds per decommitment.
 
-Might also be interesting to compare to OT protocols?
+
+
+When performing bit commitments in the LAN setting, $n=2^{24}$ commitments to random bits required 1.3 seconds and decommitting required 2 seconds. Interestingly, batch decommitting is slightly slower, requiring 2.3 seconds to decommit. We attribute this to the reduction in communication being out weighed by the add computation that is required. Indeed, in the 100Mbps WAN setting batch decommitting is faster, requiring 60 seconds as opposed to 61.
+
+In terms of communication overheads, committing to a random 128 bit value requires is 134 bits per commitment, with an added 128 overhead for chosen message. Decommitting requires 524 bits per while batch decommitting only requires 128 bits per with a constant additive overhead of 20960 bits. Committing to bits requires 40 bits of communication and decommitting requires 80 bits. Batch decommitting only requires a single bit of communication per with a constant additive overhead of 3200 bits.
