Usage guidelines, abstract and general edits

--- a/headers.tex
+++ b/headers.tex
@@ -1,3 +1,5 @@
+% -*- root:main.tex -*-
+
 \usepackage{xspace,amsmath,amsfonts,amssymb,hyperref,tikz,multirow,wrapfig,tabularx,hhline,enumitem,stmaryrd, placeins  }
 
 \usepackage{siunitx}
@@ -279,3 +281,7 @@
 \newcommand{\gamelab}[1]{\label{game:#1}}
 \newcommand{\eqlab}[1]{\label{eq:#1}}
 \newcommand{\eqnref}[1]{(\ref{eq:#1})}
+
+\newcommand{\CC}{C\&C\xspace} %cut-and-choose
+                              
+\newcommand{\RO}{\textsf{RO}\xspace}
