--- a/implementing.tex
+++ b/implementing.tex
@@ -1,6 +1,8 @@
+% -*- root:main.tex -*-
+
 \section{Implementing}
 
-To obtain a high performance implementations, several of the most heavily used operations had to be significantly optimized over the naive methods. In this section we high light the most important ones. The task which is most costly in this protocol is the matrix transpose that maps $m$ secret sharings of $n$ bit codewords to its transpose consisting of $n$ entries, each $m$ bits long. In order to perform this operation efficiently, employ optimizations originally developed for OT extension protocols. The main technique is to used special instructions available on modern Intel CPUs to accelerate the computation. The most notable of these instruction is \texttt{\_mm\_movemask\_epi8} which takes 16 bytes as input and returns a 16 bit number consisting of the least significant bit of each byte. By performing 8 of these operations interleaved with shifting the 16 bytes to the right allows for the efficient transpose of a $8\times 16$ bit matrix, requiring roughly $20\times$ few instructions. This optimization was first observed in the cryptography community by the authors of the OT extension protocol\cite{KOS} and later described in a related work\cite{mascot}. While implementing this work and the related libOTe\cite{libOTe} project, subsequently improved on this observation have been made. In particular, we employ Intel vector operations to allow 8  simultaneously\footnote{Most modern Intel CPUs support 8 vector lanes.} \texttt{\_mm\_movemask\_epi8} instructions to be performed, resulting in even greater throughput. In total these optimization represent several orders of magnitude improvement over a naive implementation and were essential in obtaining high performance.
+To obtain a high performance implementations, several of the most heavily used operations had to be significantly optimized over the naive methods. In this section we high light the most important ones. The task which is most costly in this protocol is the matrix transpose that maps $m$ secret sharings of $n$ bit codewords to its transpose consisting of $n$ entries, each $m$ bits long. In order to perform this operation efficiently, employ optimizations originally developed for OT extension protocols. The main technique is to used special instructions available on modern Intel CPUs to accelerate the computation. The most notable of these instruction is \texttt{\_mm\_movemask\_epi8} which takes 16 bytes as input and returns a 16 bit number consisting of the least significant bit of each byte. By performing 8 of these operations interleaved with shifting the 16 bytes to the right allows for the efficient transpose of a $8\times 16$ bit matrix, requiring roughly $20\times$ few instructions. This optimization was first observed in the cryptography community by the authors of the OT extension protocol~\cite{DBLP:conf/crypto/KellerOS15} and later described in a related work~\cite{DBLP:conf/ccs/KellerOS16}. While implementing this work and the related libOTe~\cite{libOTe} project, subsequently improved on this observation have been made. In particular, we employ Intel vector operations to allow 8  simultaneously\footnote{Most modern Intel CPUs support 8 vector lanes.} \texttt{\_mm\_movemask\_epi8} instructions to be performed, resulting in even greater throughput. In total these optimization represent several orders of magnitude improvement over a naive implementation and were essential in obtaining high performance.
 
 
 Another computationally intensive operation is the construction of codewords that are subsequently secret shared. The most straight forward way to construct codewords over the $\mathbb{F}_2^n$ is by multiplying the the plaintext word interpreted as a bit vector by a bit matrix known as the generator. Due to the use of a linear code, the result of this multiplication will be the desired codeword. One important observation made by \cite{DBLP:conf/tcc/FrederiksenJNT16} is that and linear code can be placed in systematic form where codewords are the input concatenated with the a series of parity bits. As such, only the parity bits need be computing using matrix multiplication. However, this computation can still dominate the running time if implemented naively. Namely, the naive method is to test each bit of the input and then add the corresponding row of the generator matrix to a running sum if the bit is set. However, when performing this operations millions or more times, it can require significant time primarily due to the CPU not being able to effectively doing branch predication on the ``random" input bits, resulting in very poor instruction pipelining. 
