--- a/performance.tex
+++ b/performance.tex
@@ -1,5 +1,7 @@
-\section{Performance}
+% -*- root:main.tex -*-
 
+\section{Performance}
+\seclab{performance}
 To demonstrate the scalability of the implementation, benchmarks have been performed in an Intel Xeon server consisting of 2 36-cores Intel Xeon CPU E5-2699 v3 @ 2.30GHz and 256GB of RAM. In the single threaded setting on a 10Gbps LAN, $n=2^{24}$ commitments on random 128 bit values required 11 seconds, resulting in 0.65 microseconds per commitment. When decommitting via sending the two secret shares for all $n$ commitments, the implementation requires 5.4 seconds, 0.32 microseconds per decommitment. The same operation performed using batch decommit, the implementation requires 4.6 seconds, 0.27 microseconds per decommitment. Furthermore, homomorphic operations can be performed extremely fast, simply requiring  a few XOR instructions per operations, requiring less than 1 seconds for $n$ operations. 
 
 In addition, we benchmark our implementation in the 100Mbps WAN setting with a 80ms round trip latency. For $n=2^{24}$, committing  required 75 seconds, 4.5 microseconds per commitment. Decommiting via sending both secret shares required 505 seconds while the more communication efficient batch decommitment method required 316 seconds, 18.9 microseconds per decommitment.
