--- a/bib.bib
+++ b/bib.bib
@@ -120,14 +120,15 @@
   biburl    = {http://dblp.uni-trier.de/rec/bib/conf/crypto/FiatS86},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
-@online{boost,
+
+@misc{boost,
    title = {{The Boost C++ Libraries}},
-   url = {http://www.boost.org}
+   howpublished = {\url{http://www.boost.org}}
 }
 
-@online{miracl,
+@misb{miracl,
    title = {{MIRACL Cryptographic SDK: Multiprecision Integer and Rational Arithmetic Cryptographic Library}},
-   url = {https://github.com/miracl/MIRACL}
+   howpublished = {\url{https://github.com/miracl/MIRACL}}
 }
 
 @inproceedings{DBLP:conf/ccs/KellerOS16,
